overlapping conflict resolved

--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@
     align-items: center;
     position: relative;
     overflow: hidden;
+    scroll-margin-top:15vh;
   }
   
   .locations-head {
@@ -268,6 +269,9 @@
   .benefits-head h3 {
     padding: 1rem;
   }
+  #benefits{
+    scroll-margin-top:15vh;
+  }
   
   .cards {
     width: 90%;
@@ -319,6 +323,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    scroll-margin-top:15vh;
   }
   
   .form-wrapper {
@@ -506,6 +511,7 @@ body.dark-mode {
   padding: 50px;
   background-color: #f4f4f4;
   text-align: center;
+  scroll-margin-top:15vh;
 }
 
 .itineraries-section h2 {
@@ -587,6 +593,7 @@ body.dark-mode {
 .reviews-section {
   padding: 50px;
   background-color: #f4f4f4;
+  scroll-margin-top:15vh;
 }
 
 .reviews-section h2 {
